<resources>
    <string name="app_name">Mini Racquet</string>
    <string name="club_loser_hint">\@loser</string>
    <string name="club_winner_hint">\@winner</string>
    <string name="defeated">defeated</string>
    <string name="established_clubs">Established Clubs</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_leaderboard_title">Leaderboard</string>
    <string name="boom">Boom!</string>
    <string name="record_match">Record a new match result</string>
    <string name="submit_match">Go</string>
    <string name="major_leagues">Major Leagues</string>
    <string name="wins">%1$d WINS</string>
    <string name="losses">%1$d LOSSES</string>
    <string name="points">%1$d pts</string>
    <string name="minor_leagues">Minor Leagues</string>
    <string name="minor_description">Where all the boys and girls play</string>
    <string name="twitter_handle">\@%1$s</string>
</resources>
